--- a/Analyses/EDA/PCA.ipynb
+++ b/Analyses/EDA/PCA.ipynb
@@ -23,8 +23,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aabb1e47",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Faire une Analyse en composantes principales"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "4e2af049",
    "metadata": {},
    "outputs": [
@@ -79,7 +88,7 @@
     "red_patch = mpatches.Patch(color='red', label='ACOUPHENES = False')\n",
     "plt.legend(handles=[blue_patch, red_patch])\n",
     "plt.grid(True)\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
