--- a/Cleaning/Data_Cleaning.ipynb
+++ b/Cleaning/Data_Cleaning.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 9,
    "id": "c6b27967",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 10,
    "id": "9c66e492",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thiev\\AppData\\Local\\Temp\\ipykernel_6920\\2480570748.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\thiev\\AppData\\Local\\Temp\\ipykernel_24864\\2480570748.py:1: DtypeWarning: Columns (4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df_quest = pd.read_csv('../Data/Anamnese.csv')\n"
      ]
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 11,
    "id": "048458cd",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
    "id": "4d62d7a6",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 13,
    "id": "5ea64488",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 14,
    "id": "898ce2e6",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 15,
    "id": "66f07f0e",
    "metadata": {},
    "outputs": [],
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 16,
    "id": "f56b5625",
    "metadata": {},
    "outputs": [],
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 17,
    "id": "210186c1",
    "metadata": {},
    "outputs": [],
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 18,
    "id": "390bffa5",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 19,
    "id": "0e7a21b5",
    "metadata": {},
    "outputs": [],
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 20,
    "id": "f04eaa1f",
    "metadata": {},
    "outputs": [
@@ -977,7 +977,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 21,
    "id": "553bc858",
    "metadata": {},
    "outputs": [],
@@ -995,7 +995,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 22,
    "id": "40f76d88",
    "metadata": {},
    "outputs": [],
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 23,
    "id": "b2c1f80d",
    "metadata": {},
    "outputs": [],
@@ -1043,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 24,
    "id": "29fe413e",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "id": "9c4855d0",
    "metadata": {},
    "outputs": [],
@@ -1091,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "id": "5b437ceb",
    "metadata": {},
    "outputs": [
@@ -1099,7 +1099,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\thiev\\AppData\\Local\\Temp\\ipykernel_6920\\1893255091.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\thiev\\AppData\\Local\\Temp\\ipykernel_24864\\1893255091.py:4: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  df_final[col] = df_final[col].replace({0.0: False, 1.0: True})\n"
      ]
     }
@@ -1122,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 27,
    "id": "d470b189",
    "metadata": {},
    "outputs": [],
@@ -1140,12 +1140,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 28,
    "id": "65c2420d",
    "metadata": {},
    "outputs": [],
    "source": [
     "df_final.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89d4a2b7",
+   "metadata": {},
+   "source": [
+    "On ajoute 1 colonne perte qui catégorise le type de perte"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "8a9225f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thr_cols = [col for col in df_final.columns if col.startswith('FREQ_') and col.endswith('_THR')]\n",
+    "df_final['mean_thr'] = df_final[thr_cols].mean(axis=1)\n",
+    "def categoriser_perte(x):\n",
+    "    if x < 20:\n",
+    "        return 'Aucune'\n",
+    "    elif 20 <= x < 40:\n",
+    "        return 'Légère'\n",
+    "    elif 40 <= x < 60:\n",
+    "        return 'Moyenne'\n",
+    "    else:\n",
+    "        return 'Sévère'\n",
+    "df_final['PERTE'] = df_final['mean_thr'].apply(categoriser_perte)\n",
+    "df_final.drop(columns=['mean_thr'], inplace=True)\n",
+    "order_perte = ['Aucune', 'Légère', 'Moyenne', 'Sévère']\n",
+    "df_final['PERTE'] = pd.Categorical(\n",
+    "    df_final['PERTE'],\n",
+    "    categories=order_perte,\n",
+    "    ordered=True\n",
+    ") "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee3eca84",
+   "metadata": {},
+   "source": [
+    "On ajoute 1 colonne classe_audiogramme qui catégorise le type d'audiogramme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "da3976a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# on regroupe les hautes et basses fréquences\n",
+    "low_freqs = [\"FREQ_250\", \"FREQ_500\", \"FREQ_1000\"]\n",
+    "high_freqs = [\"FREQ_2000\", \"FREQ_4000\", \"FREQ_8000\"]\n",
+    " \n",
+    "#on calcule la moyenne\n",
+    "def compute_avg_thresholds(row, side):\n",
+    "    lows = [row[f\"{freq}_{side}_THR\"] for freq in low_freqs if pd.notna(row.get(f\"{freq}_{side}_THR\"))]\n",
+    "    highs = [row[f\"{freq}_{side}_THR\"] for freq in high_freqs if pd.notna(row.get(f\"{freq}_{side}_THR\"))]\n",
+    "    avg_low = np.mean(lows) if lows else np.nan\n",
+    "    avg_high = np.mean(highs) if highs else np.nan\n",
+    "    return avg_low, avg_high\n",
+    " \n",
+    "#classification selon les seuils\n",
+    "def classify_audiogram(row):\n",
+    "    avg_low_R, avg_high_R = compute_avg_thresholds(row, \"D\")  # Droite\n",
+    "    avg_low_L, avg_high_L = compute_avg_thresholds(row, \"G\")  # Gauche\n",
+    "   \n",
+    "    #moyenne sur les 2 cotés\n",
+    "    avg_low = np.nanmean([avg_low_R, avg_low_L])\n",
+    "    avg_high = np.nanmean([avg_high_R, avg_high_L])\n",
+    " \n",
+    "    if pd.isna(avg_low) or pd.isna(avg_high):\n",
+    "        return \"Inclassable\"\n",
+    " \n",
+    "    #classification selon les définitions\n",
+    "    if avg_low <= 15 and avg_high <= 25:\n",
+    "        return \"Older-normal\"\n",
+    "    elif avg_low <= 15 and 15 <= avg_high <= 35:\n",
+    "        return \"Pre-metabolic\"\n",
+    "    elif 10 <= avg_low <= 45 and 25 <= avg_high <= 65 and (avg_high - avg_low) <= 25:\n",
+    "        return \"Metabolic\"\n",
+    "    elif avg_low <= 15 and avg_high >= 45 and (avg_high - avg_low) >= 25:\n",
+    "        return \"Sensory\"\n",
+    "    elif 10 <= avg_low <= 45 and avg_high > 45 and (avg_high - avg_low) >= 25:\n",
+    "        return \"Metabolic + Sensory\"\n",
+    "    else:\n",
+    "        return \"Inclassable\"\n",
+    " \n",
+    "df_final[\"CLASSE_AUDIOGRAMME\"] = df_final.apply(classify_audiogram, axis=1)\n",
+    " \n",
+    "df_final[\"CLASSE_AUDIOGRAMME\"] = df_final[\"CLASSE_AUDIOGRAMME\"].replace({\n",
+    "    \"Older-normal\": \"Normal à légère\",\n",
+    "    \"Pre-metabolic\": \"Normal à légère\"\n",
+    "})"
    ]
   },
   {
@@ -1158,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 31,
    "id": "10ee9e2b",
    "metadata": {},
    "outputs": [
@@ -1214,6 +1311,8 @@
        "      <th>FREQ_8000_G_THR</th>\n",
        "      <th>FREQ_8000_D_UCL</th>\n",
        "      <th>FREQ_8000_G_UCL</th>\n",
+       "      <th>PERTE</th>\n",
+       "      <th>CLASSE_AUDIOGRAMME</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1250,6 +1349,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Légère</td>\n",
+       "      <td>Metabolic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1284,6 +1385,8 @@
        "      <td>60.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>Metabolic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1318,6 +1421,8 @@
        "      <td>105.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Sévère</td>\n",
+       "      <td>Inclassable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1352,6 +1457,8 @@
        "      <td>35.0</td>\n",
        "      <td>90.0</td>\n",
        "      <td>85.0</td>\n",
+       "      <td>Aucune</td>\n",
+       "      <td>Normal à légère</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1386,9 +1493,13 @@
        "      <td>95.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Légère</td>\n",
+       "      <td>Sensory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1454,6 +1565,8 @@
        "      <td>60.0</td>\n",
        "      <td>85.0</td>\n",
        "      <td>95.0</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>Metabolic</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62271</th>\n",
@@ -1488,6 +1601,8 @@
        "      <td>95.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Sévère</td>\n",
+       "      <td>Metabolic + Sensory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62272</th>\n",
@@ -1522,6 +1637,8 @@
        "      <td>70.0</td>\n",
        "      <td>95.0</td>\n",
        "      <td>95.0</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>Metabolic + Sensory</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62273</th>\n",
@@ -1556,6 +1673,8 @@
        "      <td>95.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Sévère</td>\n",
+       "      <td>Inclassable</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>62274</th>\n",
@@ -1590,10 +1709,12 @@
        "      <td>90.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>Moyenne</td>\n",
+       "      <td>Metabolic + Sensory</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>62275 rows × 31 columns</p>\n",
+       "<p>62275 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -1675,20 +1796,33 @@
        "62273             85.0             90.0            100.0            110.0   \n",
        "62274             55.0             85.0            105.0            120.0   \n",
        "\n",
-       "       FREQ_8000_D_THR  FREQ_8000_G_THR  FREQ_8000_D_UCL  FREQ_8000_G_UCL  \n",
-       "0                  NaN              NaN              NaN              NaN  \n",
-       "1                 60.0             60.0              NaN              NaN  \n",
-       "2                105.0            105.0              NaN              NaN  \n",
-       "3                 40.0             35.0             90.0             85.0  \n",
-       "4                 90.0             95.0              NaN              NaN  \n",
-       "...                ...              ...              ...              ...  \n",
-       "62270             50.0             60.0             85.0             95.0  \n",
-       "62271             95.0             95.0              NaN              NaN  \n",
-       "62272             65.0             70.0             95.0             95.0  \n",
-       "62273             90.0             95.0              NaN              NaN  \n",
-       "62274             80.0             90.0              NaN              NaN  \n",
+       "       FREQ_8000_D_THR  FREQ_8000_G_THR  FREQ_8000_D_UCL  FREQ_8000_G_UCL  \\\n",
+       "0                  NaN              NaN              NaN              NaN   \n",
+       "1                 60.0             60.0              NaN              NaN   \n",
+       "2                105.0            105.0              NaN              NaN   \n",
+       "3                 40.0             35.0             90.0             85.0   \n",
+       "4                 90.0             95.0              NaN              NaN   \n",
+       "...                ...              ...              ...              ...   \n",
+       "62270             50.0             60.0             85.0             95.0   \n",
+       "62271             95.0             95.0              NaN              NaN   \n",
+       "62272             65.0             70.0             95.0             95.0   \n",
+       "62273             90.0             95.0              NaN              NaN   \n",
+       "62274             80.0             90.0              NaN              NaN   \n",
        "\n",
-       "[62275 rows x 31 columns]"
+       "         PERTE   CLASSE_AUDIOGRAMME  \n",
+       "0       Légère            Metabolic  \n",
+       "1      Moyenne            Metabolic  \n",
+       "2       Sévère          Inclassable  \n",
+       "3       Aucune      Normal à légère  \n",
+       "4       Légère              Sensory  \n",
+       "...        ...                  ...  \n",
+       "62270  Moyenne            Metabolic  \n",
+       "62271   Sévère  Metabolic + Sensory  \n",
+       "62272  Moyenne  Metabolic + Sensory  \n",
+       "62273   Sévère          Inclassable  \n",
+       "62274  Moyenne  Metabolic + Sensory  \n",
+       "\n",
+       "[62275 rows x 33 columns]"
       ]
      },
      "metadata": {},
@@ -1709,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 32,
    "id": "f8bdc74e",
    "metadata": {},
    "outputs": [
@@ -1926,6 +2060,18 @@
        "      <td>45392</td>\n",
        "      <td>72.9</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>PERTE</th>\n",
+       "      <td>category</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CLASSE_AUDIOGRAMME</th>\n",
+       "      <td>object</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1962,7 +2108,9 @@
        "FREQ_8000_D_THR        float64        3247          5.2\n",
        "FREQ_8000_G_THR        float64        3179          5.1\n",
        "FREQ_8000_D_UCL        float64       45363         72.8\n",
-       "FREQ_8000_G_UCL        float64       45392         72.9"
+       "FREQ_8000_G_UCL        float64       45392         72.9\n",
+       "PERTE                 category           0          0.0\n",
+       "CLASSE_AUDIOGRAMME      object           0          0.0"
       ]
      },
      "metadata": {},
@@ -1992,7 +2140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 33,
    "id": "d15a0a68",
    "metadata": {},
    "outputs": [],
